fix(board): add xs bleed to CSS classes

--- a/assets/styles/components/boards/_boards.scss
+++ b/assets/styles/components/boards/_boards.scss
@@ -33,6 +33,10 @@
     }
   }
 
+  &.sn-board--bleed-xs {
+    padding: $default-board-bleed-xs;
+  }
+
   &.sn-board--bleed-sm {
     padding: $default-board-bleed-sm;
   }
